[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "chronomap"
version = "2.2.0"
description = "Production-grade time-versioned key-value store with snapshots, LRU caching, TTL, and async support"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Devansh Singh", email = "devansh.jay.singh@gmail.com" }]
keywords = [
  "temporal", "key-value", "time-travel", "snapshot",
  "in-memory", "database", "asyncio", "caching",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "pytest-benchmark>=4.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "bandit[toml]>=1.7",
  "pre-commit>=3.7",
  "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/Devansh-567/chronomap"
Documentation = "https://devansh-567.github.io/chronomap"
Repository = "https://github.com/Devansh-567/chronomap.git"
Issues = "https://github.com/Devansh-567/chronomap/issues"
Changelog = "https://github.com/Devansh-567/chronomap/blob/main/CHANGELOG.md"

[project.scripts]
chronomap = "chronomap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chronomap*"]

[tool.setuptools.package-data]
chronomap = ["py.typed"]

# ──────────────────────────────────────────────
# Ruff
# ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",         # pyflakes
  "I",         # isort
  "UP",        # pyupgrade
  "B",         # flake8-bugbear
  "C4",        # flake8-comprehensions
  "SIM",       # flake8-simplify
  "TCH",       # flake8-type-checking
  "ANN",       # flake8-annotations (partial — see ignore)
]
ignore = [
  "ANN101",  # missing type annotation for self
  "ANN102",  # missing type annotation for cls
  "ANN401",  # use of Any
  "B904",    # raise from — too strict for existing code
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]   # annotations and assert are fine in tests
"examples/**" = ["ANN", "T201"] # print() is intentional in examples

[tool.ruff.format]
quote-style = "double"

# ──────────────────────────────────────────────
# mypy
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

# ──────────────────────────────────────────────
# Bandit
# ──────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = [
  "B301",  # pickle — intentional, documented
  "B403",  # import pickle — same
]

# ──────────────────────────────────────────────
# pytest
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

# ──────────────────────────────────────────────
# Coverage
# ──────────────────────────────────────────────
[tool.coverage.run]
source = ["chronomap"]
omit = ["chronomap/cli.py", "chronomap/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
