[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronomap"
dynamic = ["version"]
description = "A thread-safe, time-versioned key-value store for Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "Devansh Singh" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[tool.setuptools.dynamic]
version = { attr = "chronomap._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "core: core ChronoMap read/write/query/merge/history behavior",
    "cache: LRUCache-specific tests",
    "lock: RWLock / thread-safety / concurrency tests",
    "memory: memory monitoring / estimation tests",
    "ttl: TTL expiry and background cleanup thread tests",
    "snapshot: snapshot, rollback, and diff tests",
    "async_map: AsyncChronoMap tests",
    "cli: command-line interface tests",
]

[tool.black]
line-length = 110
target-version = ["py38"]
